@@ -1,5 +1,12 @@
 appveyor.yml
 Changes
+ctest/ctest_Makefile.PL
+ctest/Makefile
+ctest/README.txt
+ctest/t/spvm_t_hash
+ctest/t/spvm_t_hash.c
+ctest/t/spvm_t_list
+ctest/t/spvm_t_list.c
 DEVELOPMENT.txt
 examples/native/eigen/eigen.pl
 examples/native/eigen/lib/Eigen.config
@@ -24,7 +31,6 @@ lib/SPVM/BlessedObject/Package.pm
 lib/SPVM/Builder.pm
 lib/SPVM/Builder/CC.pm
 lib/SPVM/Builder/Config.pm
-lib/SPVM/Builder/Exe.pm
 lib/SPVM/Builder/include/spvm_allow.h
 lib/SPVM/Builder/include/spvm_array_field_access.h
 lib/SPVM/Builder/include/spvm_base.h
@@ -232,39 +238,40 @@ Makefile.PL
 MANIFEST			This list of files
 ppport.h
 README.md
-script/spvmcc
-solo/lib/TestCase.spvm
-solo/lib/TestCase/Allow.spvm
-solo/lib/TestCase/Callback1.spvm
-solo/lib/TestCase/Callback2.spvm
-solo/lib/TestCase/Comparator.spvm
-solo/lib/TestCase/ComparatorAnon.spvm
-solo/lib/TestCase/Complex_2d.spvm
-solo/lib/TestCase/ComplexCalc.spvm
-solo/lib/TestCase/Data/Weaken.spvm
-solo/lib/TestCase/Destructor.spvm
-solo/lib/TestCase/EnumA.spvm
-solo/lib/TestCase/EnumB.spvm
-solo/lib/TestCase/EnumC.spvm
-solo/lib/TestCase/EnumD.spvm
-solo/lib/TestCase/ImplementCallback1.spvm
-solo/lib/TestCase/ImplementCallback2.spvm
-solo/lib/TestCase/Inline.spvm
-solo/lib/TestCase/List.spvm
-solo/lib/TestCase/Minimal.spvm
-solo/lib/TestCase/Minimal/XGetter.spvm
-solo/lib/TestCase/Point_3b.spvm
-solo/lib/TestCase/Point_3d.spvm
-solo/lib/TestCase/Point_3f.spvm
-solo/lib/TestCase/Point_3i.spvm
-solo/lib/TestCase/Point_3l.spvm
-solo/lib/TestCase/Point_3s.spvm
-solo/lib/TestCase/Pointer.spvm
-solo/lib/TestCase/Simple.spvm
-solo/lib/TestCase/Weaken.spvm
-solo/lib/TestCase/Weaken2.spvm
+solo/Main.spvm
 solo/solo_Makefile.PL
+solo/spvm_boot.c
 solo/spvm_build/.gitkeep
+solo/TestCase.spvm
+solo/TestCase/Allow.spvm
+solo/TestCase/Callback1.spvm
+solo/TestCase/Callback2.spvm
+solo/TestCase/Comparator.spvm
+solo/TestCase/ComparatorAnon.spvm
+solo/TestCase/Complex_2d.spvm
+solo/TestCase/ComplexCalc.spvm
+solo/TestCase/Data/Weaken.spvm
+solo/TestCase/Destructor.spvm
+solo/TestCase/EnumA.spvm
+solo/TestCase/EnumB.spvm
+solo/TestCase/EnumC.spvm
+solo/TestCase/EnumD.spvm
+solo/TestCase/ImplementCallback1.spvm
+solo/TestCase/ImplementCallback2.spvm
+solo/TestCase/Inline.spvm
+solo/TestCase/List.spvm
+solo/TestCase/Minimal.spvm
+solo/TestCase/Minimal/XGetter.spvm
+solo/TestCase/Point_3b.spvm
+solo/TestCase/Point_3d.spvm
+solo/TestCase/Point_3f.spvm
+solo/TestCase/Point_3i.spvm
+solo/TestCase/Point_3l.spvm
+solo/TestCase/Point_3s.spvm
+solo/TestCase/Pointer.spvm
+solo/TestCase/Simple.spvm
+solo/TestCase/Weaken.spvm
+solo/TestCase/Weaken2.spvm
 SPVM.xs
 spvm_build/.gitkeep
 spvmdoc/jp/public/css/common.css
@@ -552,11 +559,8 @@ t/default/value_array.t
 t/default/warn.t
 t/default/weaken.t
 t/default/while.t
-t/exe/exe.t
-t/exe/spvm_build/.gitkeep
 t/lib/TestAuto.pm
 t/lib/TestFile.pm
-t/spvm_build/work/exe/myexe
 t/test_files/file_eof.txt
 t/test_files/fread.txt
 t/test_files/fread_eof.txt
